--- a/src/css/donatepage.css
+++ b/src/css/donatepage.css
@@ -6,6 +6,12 @@ h1 {
 	text-align: center;
 }
 
+.backbutton{
+	position: absolute;
+	top: 0;
+	left: 0;	
+	width: 20px;
+}
 .main-content {
 	margin: auto;
 	box-sizing: border-box;
