--- a/src/css/donatepage.css
+++ b/src/css/donatepage.css
@@ -14,23 +14,39 @@ h1 {
 }
 .main-content {
 	margin: auto;
+	position: relative;
+	left: 20vw;
 	box-sizing: border-box;
 	display: flex;
-	width: 500px;
+	width: 35vw;
+	height: 80vh;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-around;
     border-radius: 4px;
 	align-items: center;
-    border: 5px solid black;
+    background-color: white;
 }
 .main-content textarea{
     resize: vertical;
 }
+
 .main-content div{
-    margin-top: 10px;
+	display: flex;
+	flex-direction: column;
+    margin-top: 50px;
+	margin-bottom: 50px;
+	align-items: center;
 }
 
-.main-content div *{
-    display: block;
+#images {
+	margin: auto;
 }
 
+div label {
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+div textarea {
+	margin: auto;
+}
