--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,18 +2,24 @@ body {
 	margin: 0;
 	/* background-image: url("../assets/indexbg.jpg");
     background-size: cover; */
+	overflow: hidden;
 }
+
 
 .account-links {
 	display: flex;
 	justify-content: end;
+	position: relative;
+	right: 15px;
+	top: 5px;
 }
 
 .login-link {
 	font-size: 25px;
 	margin-top: 10px;
-	margin-right: 10px;
+	margin-right: 25px;
 	text-decoration: none;
+	font-size: 20px;
 	color: white;
 	transition: color 0.25s;
 }
@@ -26,7 +32,7 @@ body {
 	position: absolute;
 	z-index: -1;
 	width: 100vw;
-	height: 100vh;
+	
 }
 .main-content {
 	margin-top: 20px;
@@ -37,13 +43,15 @@ body {
 }
 
 #header {
-    margin-top: -25px;
+	position: relative;
+	bottom: 7vh;
 	color: rgb(12, 197, 12);
     font-size: 60px;
 }
 
 #subheader {
-	margin-top: -15px;
+	position: relative;
+	bottom: 13vh;
     font-size: 25px;
 	color: white;
 }
@@ -51,17 +59,19 @@ body {
 .main-buttons {
 	width: inherit;
 	display: flex;
+	position: relative;
+	bottom: 3vh;
 	justify-content: space-between;
 }
-.main-buttons a {
+.main-buttons a{
     box-sizing: border-box;
     color: white;
-    height: 40px;
-    width: 100px;
-    text-align: center;
+    height: 60px;
+    width: 150px;
+	text-align: center;
+	font-size: 20px;
     margin: 0px 40px;
 	text-decoration: none;
     border-radius: 25px;
     background-color:rgb(66, 186, 250);
-	padding: 10px;
 }
