--- a/src/css/donatepage.css
+++ b/src/css/donatepage.css
@@ -1,6 +1,8 @@
 body {
     margin-top: 4rem;
     background-color: rgb(66, 186, 250);
+	display: flex;
+	flex-direction: row;
 }
 h1 {
 	text-align: center;
@@ -12,10 +14,25 @@ h1 {
 	left: 0;	
 	width: 20px;
 }
+
+#preview {
+	display: flex;
+	align-items: flex-start	;
+	flex-direction: column;
+	margin: auto;
+	justify-content: center;
+	width: 35vw;
+	height: 80vh;
+	overflow-y: auto;
+	overflow-x: hidden;
+	row-gap: 0px;
+	background-color: white;
+}
+
 .main-content {
 	margin: auto;
 	position: relative;
-	left: 20vw;
+	right: 5vw;
 	box-sizing: border-box;
 	display: flex;
 	width: 35vw;
@@ -26,8 +43,10 @@ h1 {
 	align-items: center;
     background-color: white;
 }
+
 .main-content textarea{
-    resize: vertical;
+    height: 8vh;
+	width: 16vw;
 }
 
 .main-content div{
