--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -26,7 +26,7 @@ p {
     display: flex;
     flex-direction: column;
     margin: 15vh auto;
-    background-color: #48cae4;
+    background-color: rgb(66, 186, 250);
     border: 1px black solid;
     border-radius: 25px;
 }
