--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,7 @@ body {
 	overflow: hidden;
 }
 
-.account-links {
+#account-links {
 	display: flex;
 	justify-content: end;
 	position: relative;
@@ -105,4 +105,8 @@ body {
 	text-decoration: none;
     border-radius: 25px;
     background-color:rgb(66, 186, 250);
+}
+
+.hide{
+	display: none;
 }
