--- a/src/css/buypage.css
+++ b/src/css/buypage.css
@@ -1,3 +1,7 @@
+html * {
+	font-family: 'Asap Condensed', sans-serif;
+}
+
 body {
 	background-color: white;
 	overflow: auto;
@@ -5,7 +9,6 @@ body {
 
 h1 {
 	font-family: 'Merriweather', serif;
-    font-family: 'Poppins', sans-serif;
 	margin-top: 50px;
 }
 
@@ -44,7 +47,6 @@ h1 {
 #searchForm{
 	display: inline;
 }
-<<<<<<< HEAD
 
 #search {
 	margin: 15px 0;
@@ -64,16 +66,17 @@ h1 {
 	width: 150px;
 	height: 150px;
 	cursor: pointer;
-	border: 2px solid black;	
-=======
+	border: 2px solid black;
+}
+
 .fig{
 	text-align: center;
 }
+
 .item {
 	margin: 10px;
 	border-radius: 5px;
 	width: 100px;
 	height: 100px;
 	cursor: pointer;	
->>>>>>> f6fca7e020267c01eafaa670d54c88ae83872335
 }
