--- a/src/css/donatepage.css
+++ b/src/css/donatepage.css
@@ -1,3 +1,7 @@
+html * {
+	font-family: 'Asap Condensed', sans-serif;
+}
+
 body {
     margin-top: 4rem;
     background-image: url(../assets/img3.png);
@@ -57,8 +61,8 @@ h1 {
 .main-content div{
 	display: flex;
 	flex-direction: column;
-    margin-top: 50px;
-	margin-bottom: 50px;
+    margin-top: 10px;
+	margin-bottom: 30px;
 	align-items: center;
 }
 
@@ -68,7 +72,7 @@ h1 {
 
 div label {
 	text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 div textarea {
