--- a/src/css/donatepage.css
+++ b/src/css/donatepage.css
@@ -34,7 +34,7 @@ h1 {
 	row-gap: 0px;
 	background-color: white;
 	box-sizing: border-box;
-	border: 6px rgb(12, 197, 12) solid;
+	border: 4px rgb(12, 197, 12) solid;
 	border-radius: 25px;
 }
 
@@ -51,7 +51,7 @@ h1 {
 	border-radius: 4px;
 	align-items: center;
 	background-color: white;
-	border: 6px rgb(12, 197, 12) solid;
+	border: 4px rgb(12, 197, 12) solid;
 	border-radius: 25px;
 	overflow: auto;
 }
@@ -64,20 +64,21 @@ h1 {
 .main-content div {
 	display: flex;
 	flex-direction: column;
-<<<<<<< HEAD
     margin-top: 10px;
 	margin-bottom: 30px;
 	align-items: center;
-=======
 	justify-content: flex-start;
 	margin-top: 50px;
 	margin-bottom: 50px;
 	/* align-items: center; */
->>>>>>> c582be8f3cb06cf8146f4019fca797959ad0678a
 }
 
 #images {
 	margin: auto;
+}
+
+#submit {
+	margin-bottom: 40px;
 }
 
 div label {
