--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -4,7 +4,7 @@ html *{
 
 body {
     overflow: hidden;
-    background-color: rgb(58, 60, 59);
+    background-image: url('../assets/img2.jpg');
     background-size: 100vw 100vh;
 }
 p {
